--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -2,7 +2,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>customer</artifactId>
+  <artifactId>fraud</artifactId>
+
   <dependencies>
     <dependency>
       <artifactId>spring-boot-starter-web</artifactId>
