--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -17,6 +17,10 @@
       <groupId>org.postgresql</groupId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
