--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -22,6 +22,12 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       <groupId>org.springframework.cloud</groupId>
     </dependency>
+    <dependency>
+      <groupId>com.vergara.henrique</groupId>
+      <artifactId>clients</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
