--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <groupId>org.springframework.boot</groupId>
     </dependency>
+    <dependency>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
@@ -52,6 +56,7 @@
     <module>customer</module>
     <module>fraud</module>
     <module>eureka-server</module>
+    <module>clients</module>
   </modules>
 
   <name>microservices</name>
