--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <module>fraud</module>
     <module>eureka-server</module>
     <module>clients</module>
+    <module>notification</module>
   </modules>
 
   <name>microservices</name>
