--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -22,6 +22,10 @@
       <groupId>org.springframework.cloud</groupId>
     </dependency>
     <dependency>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
+    <dependency>
       <artifactId>clients</artifactId>
       <groupId>com.vergara.henrique</groupId>
       <scope>compile</scope>
