--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -8,6 +8,15 @@
       <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
       <groupId>org.springframework.cloud</groupId>
     </dependency>
+    <dependency>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <version>2.5.7</version>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
