--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -23,10 +23,14 @@
       <groupId>org.springframework.cloud</groupId>
     </dependency>
     <dependency>
-      <groupId>com.vergara.henrique</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
+    <dependency>
       <artifactId>clients</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>com.vergara.henrique</groupId>
       <scope>compile</scope>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
