--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -17,6 +17,10 @@
       <groupId>org.springframework.boot</groupId>
       <version>2.5.7</version>
     </dependency>
+    <dependency>
+      <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
