--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -27,6 +27,10 @@
       <groupId>org.springframework.cloud</groupId>
     </dependency>
     <dependency>
+      <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+    </dependency>
+    <dependency>
       <artifactId>clients</artifactId>
       <groupId>com.vergara.henrique</groupId>
       <scope>compile</scope>
