--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>eureka-server</module>
     <module>clients</module>
     <module>notification</module>
+    <module>apigw</module>
   </modules>
 
   <name>microservices</name>
