--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -35,6 +35,15 @@
       <scope>compile</scope>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>amqp</artifactId>
+      <groupId>com.vergara.henrique</groupId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
