--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
     <module>clients</module>
     <module>notification</module>
     <module>apigw</module>
+    <module>amqp</module>
   </modules>
 
   <name>microservices</name>
