--- a/amqp/pom.xml
+++ b/amqp/pom.xml
@@ -12,14 +12,11 @@
 
   <modelVersion>4.0.0</modelVersion>
 
+  <packaging>jar</packaging>
+
   <parent>
     <artifactId>microservices</artifactId>
     <groupId>com.vergara.henrique</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
 </project>
