--- a/apigw/pom.xml
+++ b/apigw/pom.xml
@@ -3,6 +3,14 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>apigw</artifactId>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -21,8 +29,9 @@
       <groupId>org.springframework.cloud</groupId>
     </dependency>
   </dependencies>
-
   <modelVersion>4.0.0</modelVersion>
+
+  <packaging>jar</packaging>
 
   <parent>
     <artifactId>microservices</artifactId>
@@ -30,9 +39,18 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
+  <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>jib-maven-plugin</artifactId>
+            <groupId>com.google.cloud.tools</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>build-docker-image</id>
+    </profile>
+  </profiles>
 
 </project>
