--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -12,15 +12,11 @@
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
-  <parent>
+  <packaging>jar</packaging>
+<parent>
     <artifactId>microservices</artifactId>
     <groupId>com.vergara.henrique</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
 
 </project>
