--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -2,7 +2,18 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <artifactId>customer</artifactId>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -42,21 +53,19 @@
     <dependency>
       <artifactId>amqp</artifactId>
       <groupId>com.vergara.henrique</groupId>
+      <scope>compile</scope>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
 
+  <packaging>jar</packaging>
+
   <parent>
     <artifactId>microservices</artifactId>
     <groupId>com.vergara.henrique</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
 
 </project>
