--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -4,6 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>fraud</artifactId>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -37,18 +45,12 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
-
   <modelVersion>4.0.0</modelVersion>
-
+  <packaging>jar</packaging>
   <parent>
     <artifactId>microservices</artifactId>
     <groupId>com.vergara.henrique</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
 
 </project>
