--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,62 @@
       <plugins>
         <plugin>
           <artifactId>spring-boot-maven-plugin</artifactId>
+          <executions>
+            <execution>
+              <goals>
+                <goal>repackage</goal>
+              </goals>
+            </execution>
+          </executions>
           <groupId>org.springframework.boot</groupId>
           <version>${spring.boot.maven.plugin.version}</version>
         </plugin>
+        <plugin>
+          <artifactId>jib-maven-plugin</artifactId>
+          <configuration>
+            <from>
+              <image>eclipse-temurin:17@sha256:2b47a8ea946ce1e5365a1562414ed576e378b7b670cadff3fb98ebecf2890cdc</image>
+              <platforms>
+                <platform>
+                  <architecture>arm64</architecture>
+                  <os>linux</os>
+                </platform>
+                <platform>
+                  <architecture>amd64</architecture>
+                  <os>linux</os>
+                </platform>
+              </platforms>
+            </from>
+            <to>
+              <tags>
+                <tag>latest</tag>
+              </tags>
+            </to>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>build</goal>
+              </goals>
+              <phase>package</phase>
+            </execution>
+          </executions>
+          <groupId>com.google.cloud.tools</groupId>
+          <version>3.1.4</version>
+        </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.8.0</version>
+      </plugin>
+    </plugins>
   </build>
 
   <dependencies>
@@ -67,6 +118,7 @@
   <packaging>pom</packaging>
 
   <properties>
+    <image>henriquevergara/${project.artifactId}:${project.version}</image>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
